# E0255-Compiler-Design-2025

./: .gitignore  generateStructure.sh
Assignment1/: -disable-output  .compute.dot  .simple_if_else.dot  .test2.dot  .test3.dot  CMakeLists.txt  README.md  modified_output.ll  optimized_IR1.ll  optimized_IR2.ll  optimized_IR3.ll  optmized_IR1  runPass.sh  test1.c  test1.ll  test1_mem2reg.ll  test2.c  test2.ll  test2_mem2reg.ll  test3.c  test3.ll  test3_mem2reg.ll  test4.c  test4.ll  test4_mem2reg.ll  test5.c  test5.ll  test5_mem2reg.ll  test6.c  test6.ll  test6_mem2reg.ll  test7.c  test7.ll  test7_mem2reg.ll  test8.c  test8.ll  test8_mem2reg.ll  test9.c  test9.ll  test9_mem2reg.ll  (+1 more)
Assignment1/lib/: newpass.cpp  pass.cpp
Assignment1Final/: HoistAnticipatedExpressions.cpp  Readme.txt  test1.ll  test2.ll  test4.ll  test5.ll  test6.ll  test8.ll  test9.ll
Assignment2/: LoopInterchange.cpp  Readme.txt  description.txt  test1.mlir  test10.mlir  test2.mlir  test3.mlir  test4.mlir  test5.mlir  test6.mlir  test7.mlir  test8.mlir  test9.mlir
BasicBlockAnalysisPass/: -disable-output  CMakeLists.txt  test1.c  test1.ll  test2.c  test2.ll  test3.c  test3.ll
BasicBlockAnalysisPass/lib/: BasicBlockPass.cpp
ConstantFolding/: CMakeLists.txt  generateCFG.sh  optimized_IR1.ll  optimized_IR2.ll  optimized_IR3.ll  runPass.sh  test1.c  test1.ll  test2.c  test2.ll  test3.c  test3.ll
ConstantFolding/lib/: pass.cpp
FunctionAnalysisPass/: CMakeLists.txt  test1.c  test1.ll  test2.c  test2.ll  test3.c  test3.ll  test4.c  test4.ll
FunctionAnalysisPass/lib/: FuncAnalysis.cpp
HelloWorldPass/: CMakeLists.txt  test.c  test.ll
HelloWorldPass/lib/: HelloPass.cpp
InstructionLevelAnalysisPass/: -disable-output  CMakeLists.txt  runPass.sh  test1.c  test1.ll  test2.c  test2.ll  test3.c  test3.ll
InstructionLevelAnalysisPass/lib/: pass.cpp
LLFiles/Example1/: code1.ll  code1_O1.ll
LLFiles/Example2/: code2.c  code2_O0.ll  code2_O1.ll
LLFiles/Example3Loop/: code3.c  code3_O0.ll  code3_O1.ll
LLvM1/: hello.cpp  hello.ll  hello.s  read.txt
LLvM1/Basics/: hello
LLvM1/KL/: a.out  getchar  getchar.c  toy.cpp
LatexNotes/ClassNotes/ParallelLec/: lecture.fdb_latexmk  lecture.fls  lecture.tex
LatexNotes/ClassNotes/Tuesday4March/: class.txt  matmul.c  (+3 more)
MLIR/Basics/: add.ll  add.mlir  affineFor.mlir  converToLLVM.sh  nestedFor.mlir  read.txt
MLIR/LoopTransformations/: Fusion.mlir
MLIR/MemoryAccess/: 2DLoadStore.mlir  affinemap.mlir  loadStore.mlir  manualTiling.mlir  tilings.mlir  unroll.mlir
MLIR_Pass_demo/: CMakeLists.txt
MLIR_Pass_demo/lib/: CMakeLists.txt  MyPass.cpp
MLIR_Pass_demo/test/: test.mlir
Notes/: report.aux  report.fdb_latexmk  report.fls  report.tex
llvm-pass-demo/: test.ll
llvm-pass-demo/Codes/: code1.c  code1.ll  code2.c  read.txt
llvm-pass-demo/MyFirstPass/: CMakeLists.txt  read.txt  read1.txt  test.c  test.ll
llvm-pass-demo/MyFirstPass/lib/: MyFirstPass.cpp
